crates/sith_python_parser/src/snapshots/sith_python_parser__lexer__tests__fstring_escape.snap
---
source: crates/sith_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        FStringStart,
        0..2,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        FStringMiddle(
            "\\",
        ),
        2..3,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Lbrace,
        3..4,
    ),
    (
        Name(
            Name("x"),
        ),
        4..5,
    ),
    (
        Colon,
        5..6,
    ),
    (
        FStringMiddle(
            "\\\"\\",
        ),
        6..9,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Lbrace,
        9..10,
    ),
    (
        Name(
            Name("x"),
        ),
        10..11,
    ),
    (
        Rbrace,
        11..12,
    ),
    (
        Rbrace,
        12..13,
    ),
    (
        FStringMiddle(
            " \\\"\\\"\\\n end",
        ),
        13..24,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        FStringEnd,
        24..25,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Newline,
        25..25,
    ),
]
```
